# merian-wrs

./: .clocignore  .gitignore  .gitmodules  README.md  generic_types.hpp  merian-example.sublime-project  meson.build  plot_block_scan.py  plot_block_scan_memory_throughput.py  plot_block_scan_scoreboard.py  plot_cutpoint_latency.py  plot_heatmap.py  plot_hst_benchmark.py  plot_hst_rmse.py  plot_its_benchmark.py  plot_its_rmse.py  plot_its_throughput.py  plot_its_throughput_with_construction.py  plot_memcpy.py  plot_memcpy_benchmark.py  plot_memcpy_latency.py  plot_memcpy_memory_throughput.py  plot_partition_benchmark.py  plot_partition_scan.py  plot_philox_rmse.py  plot_prefix_sum_benchmark.py  plot_psa_benchmark.py  plot_psa_reference_rmse.py  plot_psa_rmse.py  plot_psa_split_latency.py  plot_psa_split_throughput.py  plot_rmse_cross.py  plot_scan.py  plot_scan_latency.py  plot_scan_memory_throuput.py  plot_std_rmse.py  plot_sweeping_rmse.py  plot_wrs_benchmark_best_method.py  plot_wrs_benchmark_for_fixed_N.py  plot_wrs_sample_latencies.py
src/: compute_sum.comp  main.cpp  meson.build  renderdoc.cpp  renderdoc.hpp
src/bench/: block_scan.cpp  block_scan.hpp  cutpoint_latency.cpp  cutpoint_latency.hpp  memcpy.cpp  memcpy.hpp  meson.build  prefix_partition.cpp  prefix_partition.hpp  psa_split.cpp  psa_split.hpp  psa_split2.cpp  psa_split2.hpp  sample_throughput.cpp  sample_throughput.hpp  scan.cpp  scan.hpp  scan2.cpp  wrs.cpp  wrs.hpp
src/dep/: meson.build  why.hpp
src/dep/algorithm/: meson.build
src/dep/algorithm/hs/: HS.hpp  meson.build  test.cpp  test.hpp
src/dep/algorithm/include/: subgroup_scan.comp
src/dep/algorithm/its/: ITS.hpp  meson.build  test.cpp
src/dep/algorithm/mean/: Mean.hpp  MeanAllocFlags.hpp  meson.build
src/dep/algorithm/partition/: meson.build
src/dep/algorithm/prefix_partition/: PrefixPartition.hpp  meson.build  test.cpp
src/dep/algorithm/prefix_sum/: meson.build
src/dep/algorithm/prng/: meson.build
src/dep/algorithm/psa/: meson.build
src/dep/bench/: hst.cpp  memcpy.cpp  memcpy.hpp  meson.build  prefix_sum.cpp  prefix_sum.hpp  psa.hpp
src/dep/eval/: hst_eval.hpp  hst_std_eval.hpp  its_eval.cpp  meson.build  psa_ref_eval.hpp  std_eval.cpp  sweeping_eval.cpp
src/dep/export/: csv.hpp
src/dep/layout/: BufferView.hpp  StructLayout.hpp
src/dep/memory/: DefaultResource.cpp  DefaultResource.hpp  FallbackResource.hpp  meson.build
src/dep/reference/: inverse_alias_table.hpp  sample_alias_table.hpp
src/dep/test/: README.md  compare_ranges.hpp  is_split.hpp  is_stable_partition.hpp
src/dep/types/: alias_table.hpp  glsl.hpp  partition.hpp  split.hpp
src/device/: meson.build
src/device/common/: block_scan.comp  raking_smem_scan.comp  ranked_scan.comp  shfl_scan.comp
src/device/mean/: Mean.hpp  MeanAllocFlags.hpp  meson.build  test.cpp  test.hpp
src/device/memcpy/: Memcpy.hpp  shader.comp
src/device/partition/: Partition.hpp  PartitionAllocFlags.hpp  test.cpp  test.hpp
src/device/prefix_partition/: PrefixPartition.hpp  PrefixPartitionAllocFlags.hpp  test.cpp  test.hpp
src/device/prefix_sum/: PrefixSum.hpp  PrefixSumAllocFlags.hpp  meson.build  test.cpp  test.hpp
src/device/prng/: PRNG.hpp
src/device/statistics/: meson.build
src/device/wrs/: WRS.hpp  meson.build  test.cpp  test.hpp
src/device/wrs/its/: ITS.hpp  (+1 more)
src/host/: meson.build  why.hpp
src/host/assert/: compare_ranges.hpp  is_alias_table.hpp  is_partition.hpp  is_prefix.hpp  is_split.hpp  is_stable_partition.hpp  test.cpp  test.hpp
src/host/export/: csv.hpp  logscale.hpp
src/host/layout/: ArrayLayout.hpp  Attribute.hpp  BufferView.hpp  PrimitiveLayout.hpp  StaticString.hpp  StructLayout.hpp  layout_traits.hpp
src/host/memory/: DefaultResource.cpp  DefaultResource.hpp  FallbackResource.hpp  MemoryResource.hpp  SafeResource.hpp  StackResource.hpp
src/host/reference/: inverse_alias_table.hpp  mean.hpp  pack.hpp  partition.hpp  prefix_sum.hpp  psa_alias_table.hpp  reduce.hpp  sample_alias_table.hpp  split.hpp  sweeping_alias_table.hpp
src/host/statistics/: chi_square.cpp  chi_square.hpp  histogram.hpp  js_divergence.hpp  kl_divergence.hpp  meson.build
src/host/types/: alias_table.hpp  glsl.hpp  partition.hpp  split.hpp
src/wrs/: common_vulkan.hpp  generic_types.hpp  why.hpp
src/wrs/algo/: AggAvg.hpp  PartitionAndPrefixSum.hpp  PivotPartition.hpp  PrefixSum.hpp  PrefixSumAndAvg.hpp  Reduce.hpp
src/wrs/algorithm/: README.md
src/wrs/bench/: hst.cpp  hst.hpp  its.cpp  its.hpp  partition.cpp  partition.hpp  psa.cpp
src/wrs/buffer_view/: BufferView.hpp
src/wrs/cpu/: stable.hpp
src/wrs/eval/: chi_square.hpp  histogram.hpp  hst_eval.cpp  hst_std_eval.cpp  its_eval.cpp  its_eval.hpp  logscale.hpp  philox_eval.cpp  philox_eval.hpp  psa_eval.cpp  psa_eval.hpp  psa_ref_eval.cpp  psa_ref_eval.hpp  rms.hpp  std_eval.hpp  sweeping_eval.hpp
src/wrs/export/: csv.hpp
src/wrs/kernels/: ConstDivKernel.hpp  DecoupledPivotPartitionKernel.hpp  DecoupledPrefixSumAndAvgKernel.hpp  DecoupledPrefixSumKernel.hpp  FinalAggAvgKernel.hpp  PartitionAndPrefixSumKernel.hpp  WorkgroupReduceKernel.hpp  const_div_kernel.comp  decoupled_back.comp  decoupled_partition_and_prefix_sum.comp  decoupled_pivot_partition.comp  decoupled_prefix_sum.comp  decoupled_prefix_sum_and_avg.comp  final_agg_avg_kernel.comp  workgroup_reduce_kernel.comp
src/wrs/layout/: ArrayLayout.hpp  Attribute.hpp  BufferView.hpp  PrimitiveLayout.hpp  StaticString.hpp  StructLayout.hpp  layout_traits.hpp
src/wrs/memory/: FallbackResource.hpp  MemoryResource.hpp  README.md  SafeResource.hpp  StackResource.hpp
src/wrs/reference/: README.md  binomial.hpp  gamma.hpp  mean.hpp  pack.hpp  partition.hpp  prefix_sum.hpp  psa_alias_table.hpp  reduce.hpp  sample_alias_table.hpp  split.hpp  sweeping_alias_table.hpp
src/wrs/test/: compare_prefix.hpp  compare_ranges.hpp  histogram.hpp  is_alias_table.hpp  is_partition.hpp  is_prefix.hpp  is_split.hpp  is_stable_partition.hpp  logscale.hpp  partially_ordered.hpp  rms.hpp  test.cpp  test.hpp
src/wrs/types/: alias_table.hpp  glsl.hpp  partition.hpp  split.hpp
(+379 files in other folders)
