src_files += files('main.cpp')


src_files += files('wrs/gen/weight_generator.cpp')
src_files += files('wrs/memory/DefaultResource.cpp')

src_files += files('wrs/algorithm/prefix_partition/decoupled/test.cpp')
src_files += files('wrs/algorithm/split/scalar/test.cpp')
src_files += files('wrs/algorithm/mean/decoupled/test.cpp')
src_files += files('wrs/eval/psa_ref_eval.cpp')
src_files += files('wrs/eval/std_eval.cpp')
src_files += files('wrs/eval/sweeping_eval.cpp')
src_files += files('wrs/test/test.cpp')
