src_files += files('main.cpp')
src_files += files('renderdoc.cpp')


src_files += files('wrs/gen/weight_generator.cpp')
src_files += files('wrs/memory/DefaultResource.cpp')

src_files += files('wrs/algorithm/prefix_partition/decoupled/test.cpp')
src_files += files('wrs/algorithm/prefix_partition/decoupled/DecoupledPrefixPartition.cpp')
src_files += files('wrs/algorithm/split/scalar/test.cpp')
src_files += files('wrs/algorithm/split/scalar/test.lsp.cpp')
src_files += files('wrs/algorithm/split/scalar/ScalarSplit.cpp')
src_files += files('wrs/algorithm/mean/decoupled/test.cpp')
src_files += files('wrs/algorithm/mean/decoupled/DecoupledMean.cpp')
src_files += files('wrs/algorithm/pack/scalar/test.cpp')
src_files += files('wrs/algorithm/pack/scalar/test.lsp.cpp')
src_files += files('wrs/algorithm/pack/scalar/ScalarPack.cpp')
src_files += files('wrs/algorithm/pack/simd/test.cpp')

src_files += files('wrs/algorithm/hs/hstc/test.cpp')

src_files += files('wrs/algorithm/hs/sampling/test.cpp')

src_files += files('wrs/algorithm/hs/explode/test.cpp')
src_files += files('wrs/algorithm/hs/explode/test.lsp.cpp')
src_files += files('wrs/algorithm/hs/explode/Explode.cpp')

src_files += files('wrs/algorithm/psa/PSA.cpp')
src_files += files('wrs/algorithm/psa/test.cpp')
src_files += files('wrs/algorithm/psa/test.lsp.cpp')
src_files += files('wrs/algorithm/psa/construction/test.cpp')
src_files += files('wrs/algorithm/psa/construction/test.lsp.cpp')
src_files += files('wrs/algorithm/psa/construction/PSAC.cpp')
src_files += files('wrs/algorithm/psa/sampling/test.cpp')
src_files += files('wrs/algorithm/psa/sampling/test.lsp.cpp')
src_files += files('wrs/algorithm/psa/sampling/SampleAliasTable.cpp')
src_files += files('wrs/algorithm/prng/philox/test.cpp')
src_files += files('wrs/algorithm/its/sampling/test.cpp')
src_files += files('wrs/algorithm/prefix_sum/decoupled/DecoupledPrefixSum.cpp')
src_files += files('wrs/algorithm/prefix_sum/decoupled/test.cpp')
src_files += files('wrs/algorithm/its/ITS.cpp')
src_files += files('wrs/algorithm/its/test.cpp')
src_files += files('wrs/eval/psa_ref_eval.cpp')
src_files += files('wrs/eval/std_eval.cpp')
src_files += files('wrs/eval/its_eval.cpp')
src_files += files('wrs/eval/sweeping_eval.cpp')
src_files += files('wrs/test/test.cpp')


src_files += files('wrs/bench/its.cpp')
src_files += files('wrs/bench/psa.cpp')

