src_files += files('block_scan.cpp')
src_files += files('cutpoint_latency.cpp')
src_files += files('memcpy.cpp')
src_files += files('prefix_partition.cpp')
src_files += files('psa_split.cpp')
src_files += files('psa_split2.cpp')
src_files += files('sample_throughput.cpp')
src_files += files('scan.cpp')
src_files += files('wrs.cpp')
